favicon and logo assets fix

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/src/assets/cat-guitar.png" />
+  <link rel="icon" type="image/png" href="/assets/cat-guitar.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cat Tracks - Last.fm Collage Generator</title>
   <meta name="description" content="Crie collages dos seus álbuns mais ouvidos no Last.fm" />
